[package]
name = "witch_blvde_sapce_rbot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = "0.13.0"
tokio = { version = "1.8", features = ["full"] }
teloxide-macros = "0.8.0"
lazy_static = "1.5.0"
once_cell = "1.20.2"
supabase_rs = "0.4.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
